<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>

    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map location</string>
    <string name="action_share">Share</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_id" translatable="false">location</string>
    <string name="pref_location_id_default" translatable="false">77401</string>
    <string name="pref_city_label">City</string>
    <string name="pref_city" translatable="false">city</string>
    <string name="pref_city_default" translatable="false">Ivano-Frankivsk</string>
    <string name="pref_enable_location_detection_key">location_detection</string>
    <string name="pref_enable_location_detection_true">Enabled</string>
    <string name="pref_enable_location_detection_false">Not Enabled</string>
    <string name="pref_enable_location_detection_label">Location Detection</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_coord_lat">coord_lat</string>
    <string name="pref_coord_lon">coord_lon</string>
    <string name="pref_coord_lon_default">24.8448</string>
    <string name="pref_coord_lat_default">48.9022</string>

    <string name="content_description_icon">list item icon</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>,<xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind:<xliff:g id="speed">%1$1.0f</xliff:g> mph<xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind:<xliff:g id="speed">%1$1.0f</xliff:g> km/h<xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="format_city"><xliff:g id="city">%1$s</xliff:g> (<xliff:g id="country">%2$s</xliff:g>)</string>

    <string name="sync_account_type">sunshine.deputat.com</string>
    <string name="content_authority">com.deputat.android.sunshine.app</string>

    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="alert_dialog_choose_unit_title">Choose Unit</string>
    <string name="title_activity_cities">Cities</string>
    <string name="text_search">Search</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
</resources>
