<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/offset_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal_grey"
            android:orientation="vertical"
            android:showDividers="middle|end">

            <com.deputat.sunshine.views.SettingsItem
                android:id="@+id/si_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:defaultValue="@string/pref_units_label_metric"
                app:key="@string/pref_units_key"
                app:subtitleText="@string/pref_units_label_metric"
                app:subtitleVisibility="visible"
                app:titleText="@string/pref_units_label" />

            <com.deputat.sunshine.views.SettingsItem
                android:id="@+id/si_enable_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:defaultValue="@string/pref_enable_notifications_true"
                app:key="@string/pref_enable_notifications_key"
                app:subtitleText="@string/pref_enable_notifications_true"
                app:subtitleVisibility="visible"
                app:switchVisibility="visible"
                app:titleText="@string/pref_enable_notifications_label" />

            <com.deputat.sunshine.views.SettingsItem
                android:id="@+id/si_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:defaultValue="@string/pref_city_default"
                app:key="@string/pref_location_id"
                app:subtitleText="@string/pref_city_default"
                app:subtitleVisibility="visible"
                app:titleText="@string/pref_city_label" />

            <com.deputat.sunshine.views.SettingsItem
                android:id="@+id/si_enable_location_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:defaultValue="@string/pref_enable_location_detection_true"
                app:key="@string/pref_enable_location_detection_key"
                app:subtitleText="@string/pref_enable_location_detection_true"
                app:subtitleVisibility="visible"
                app:switchVisibility="visible"
                app:titleText="@string/pref_enable_location_detection_label" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>